tests/fails/f24.t

terra foo()
    return 3 >> 4.4
end
foo()